--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "astro": "^5.15.8",
     "svelte": "^5.43.8",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "sass": "^1.94.0"
   }
 }
